--- a/message_generation/pom.xml
+++ b/message_generation/pom.xml
@@ -91,7 +91,7 @@
                                 </manifest>
                             </archive>
                             <descriptorRefs>
-                                <descriptorRef>jar-with-dependencies</descriptorRef>
+                                <descriptorRef>full</descriptorRef>
                             </descriptorRefs>
                         </configuration>
                         <executions>
