--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ local.properties
 /rosjava_messages/test_msgs/target/
 /rosjava_messages/rosjava_test_msgs/target/
 /rosjava_core/target/
+/rosjava_messages/industrial_msgs/target/
